# ros2_fault_injection

./: .clang-format  .gitignore  CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  fault_injector_plugins.xml  package.xml
.github/workflows/: ci.yml
config/: battery_faults.yaml  imu_faults.yaml  motor_feedback_faults.yaml  multi_injector_faults.yaml  odom_faults.yaml  scan_faults.yaml  tf_faults.yaml  trigger_service_faults.yaml
docs/: Doxyfile.in  adding_a_fault_type.md  adding_an_injector.md  api_reference.rst  architecture.md  conf.py  fault_configuration.md  index.rst  mainpage.md  requirements.txt  services.md
include/ros2_fault_injection/: fault_config.hpp  fault_config_schema.hpp  fault_controller.hpp  fault_descriptions.hpp  fault_event_publisher.hpp  fault_injector.hpp  fault_injector_base.hpp  fault_injector_factory.hpp  fault_scheduler.hpp  fault_service_manager.hpp  imu_fault_injector.hpp  joint_state_fault_injector.hpp  odom_fault_injector.hpp  scan_fault_injector.hpp  scenario_config.hpp  scenario_validator.hpp  trigger_service_fault_injector.hpp
include/ros2_fault_injection/assertions/: assertion_config.hpp  assertion_result.hpp  fault_assertion_runner.hpp  fault_event_assertion.hpp  scenario_monitor.hpp  topic_hz_assertion.hpp
include/ros2_fault_injection/config/: fault_config.hpp  fault_config_schema.hpp  scenario_config.hpp  scenario_validator.hpp
include/ros2_fault_injection/core/: builtin_fault_injector_plugin.hpp  fault_controller.hpp  fault_event_publisher.hpp  fault_event_record.hpp  fault_event_recorder.hpp  fault_injector.hpp  fault_injector_base.hpp  fault_injector_factory.hpp  fault_injector_plugin.hpp  fault_scenario_runner.hpp  fault_scheduler.hpp  fault_service_manager.hpp  report_creator.hpp  scenario_report.hpp
include/ros2_fault_injection/injectors/: imu_fault_injector.hpp  joint_state_fault_injector.hpp  odom_fault_injector.hpp  scan_fault_injector.hpp  tf_fault_injector.hpp  trigger_service_fault_injector.hpp
include/ros2_fault_injection/utils/: fault_descriptions.hpp
launch/: fault_injector.launch.py  odom_fault_injector.launch.py
msg/: AssertionEvent.msg  FaultEvent.msg  FaultStatus.msg  ScenarioStatus.msg
src/: fault_config_schema.cpp  fault_controller.cpp  fault_descriptions.cpp  fault_event_publisher.cpp  fault_injector_base.cpp  fault_injector_factory.cpp  fault_injector_node.cpp  fault_scenario_runner_node.cpp  fault_scheduler.cpp  fault_service_manager.cpp  imu_fault_injector.cpp  joint_state_fault_injector.cpp  odom_fault_injector.cpp  odom_fault_injector_node.cpp  scan_fault_injector.cpp  scenario_config.cpp  scenario_validator.cpp  trigger_service_fault_injector.cpp
src/assertions/: fault_assertion_runner.cpp  fault_event_assertion.cpp  scenario_monitor.cpp  topic_hz_assertion.cpp
src/config/: fault_config_schema.cpp  scenario_config.cpp  scenario_validator.cpp
src/core/: builtin_fault_injector_plugin.cpp  fault_controller.cpp  fault_event_publisher.cpp  fault_event_recorder.cpp  fault_injector_base.cpp  fault_injector_factory.cpp  fault_scenario_runner.cpp  fault_scheduler.cpp  fault_service_manager.cpp  report_creator.cpp
src/injectors/: imu_fault_injector.cpp  joint_state_fault_injector.cpp  odom_fault_injector.cpp  scan_fault_injector.cpp  tf_fault_injector.cpp  trigger_service_fault_injector.cpp
src/utils/: fault_descriptions.cpp
srv/: GetFaultConfig.srv  GetFaultSchema.srv  GetFaultStatus.srv  GetScenario.srv  ListFaults.srv  RequestReport.srv  SetFaultConfig.srv  SetFaultState.srv
test/: test_fault_config_schema.cpp  test_fault_description.cpp  test_fault_injector_base.cpp  test_fault_scheduler.cpp  test_fault_service_manager.cpp  test_odom_fault_injector.cpp  test_scenario_config.cpp  test_scenario_validator.cpp  test_trigger_service_fault_injector.cpp
test/assertions/: test_fault_assertion_runner.cpp  test_fault_event_assertion.cpp  test_scenario_monitor.cpp  test_topic_hz_assertion.cpp
test/config/: service_integration_faults.yaml  test_fault_config_schema.cpp  test_scenario_config.cpp  test_scenario_examples.cpp  test_scenario_validator.cpp
test/core/: test_fault_controller.cpp  test_fault_injector_base.cpp  test_fault_injector_factory.cpp  test_fault_scheduler.cpp  test_fault_service_manager.cpp  test_report_creator.cpp
test/injectors/: test_odom_fault_injector.cpp  test_tf_fault_injector.cpp  test_trigger_service_fault_injector.cpp
test/launch/: test_fault_services_launch.py
test/utils/: test_fault_description.cpp
