<?xml version="1.0"?>
<package format="3">
  <name>ros2_fault_injection</name>
  <version>0.1.0</version>
  <description>C++ ROS 2 framework for injecting controlled faults into topics, services, and transforms.</description>
  <maintainer email="reece.j.holland@gmail.com">Reece Holland</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>builtin_interfaces</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rosidl_default_runtime</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_msgs</depend>
  <depend>yaml-cpp</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_uncrustify</test_depend>

  <doc_depend>doxygen</doc_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

  <member_of_group>rosidl_interface_packages</member_of_group>

</package>
